<resources>
    <string name="app_name">AutoMobileAssist</string>
    <string name="mainMenuOpt1">Vehicle Sales</string>
    <string name="mainMenuOpt3">Service Centers And Garages</string>
    <string name="mainMenuOpt2">Spare parts and accessories</string>
    <string name="mainMenuOpt4">Emergency and roadside assistance</string>
    <string name="GarageRegfield1">Name</string>
    <string name="GarageMenuOpt1">Service Provider</string>
    <string name="GargeMenuOpt2">Search For Garage</string>
    <string name="GarageOwnerMenuOpt1">Register New Garage</string>
    <string name="GarageOwnerMenuOpt2">View Profile</string>
    <string name="Button1">Registation</string>
    <string name="Button2">View Profile</string>
    <string name="Text1">Name</string>
    <string name="Text2">Email</string>
    <string name="Text3">Birth of Date</string>
    <string name="text4">Social Insurance Number</string>
    <string name="Text5">Address</string>
    <string name="Text6">Vehicle Details</string>
    <string name="Button3">Submit</string>
    <string name="Button4">Salesmen</string>
    <string name="Button5">Customer</string>
    <string name="Text7">User Name</string>
    <string name="Text8">Password</string>
    <string name="Text9">Login</string>
    <string name="Button6">Login</string>
    <string name="VehicleDetails">Vehicle Details</string>
    <string name="RegNo">Registaion Number</string>
    <string name="OwnerName">Owner Name</string>
    <string name="Address">Adreess</string>
    <string name="Vehicle_Mod">Makers Class</string>
    <string name="Vehicle_Class">Vehicle Class</string>
    <string name="Fuel_use">Fuel Used</string>
    <string name="Engine_CC">Engine CC</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="DeleteBtn">Delete</string>
    <string name="toyota_yaris">toyota_yaris</string>
    <string name="toyota_aqua1">toyota_aqua1</string>
    <string name="view">view</string>
    <string name="toyota_yaris1">toyota_yaris1</string>
    <string name="view1">view</string>
    <string name="view2">view</string>
    <string name="view3">view</string>
    <string name="toyota_wagonr">toyota_wagonr</string>
    <string name="view4">view</string>
    <string name="toyota_hiace">toyota_hiace</string>
    <string name="susuki">Susuki</string>
    <string name="aquwa">Aquwa</string>
    <string name="view_Vehicles_customers">Search Vehicles</string>

</resources>
