<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/land_rover"
    tools:context=".Search_Vehicle">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="Search"/>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/yaris"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/toyota_aqua1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="131dp"
                android:layout_height="20dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="1500cc" />


            <Button
                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/aqua"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/aquwa" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="1500cc" />

            <Button
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/suzukisi"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/susuki" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="800cc" />

            <Button
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/kdh"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-85dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/toyota_hiace" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="2000cc" />

            <Button
                android:id="@+id/button4"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/wagon"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="169dp"
                android:layout_height="18dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/toyota_wagonr" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="-10dp"
                android:text="800cc" />

            <Button
                android:id="@+id/button5"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/yaris"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-70dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/toyota_yaris" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="1000cc" />

            <Button
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/aqua"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-70dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/toyota_aqua1" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="1500cc" />

            <Button
                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/yaris"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-70dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/toyota_yaris1" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="131dp"
                android:layout_height="17dp"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="1500cc" />

            <Button
                android:id="@+id/button8"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="330dp"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>